# SuperRocketLib

./: .gitignore  README.md  data.csv  pyproject.toml
models/: full_columns.joblib  full_scaler.joblib  stage2_model.pt  test_log.txt
scripts/: README.md  _juntar_csv.py  generate_dataset.py  inference.py  train_model.py
src/superrocketlib/: __init__.py  defaults.py  rocket.py  structures.py
src/superrocketlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/superrocketlib/components/: README.md  __init__.py  aerodynamics.py  motor.py  parachute.py  rail_buttons.py
src/superrocketlib/core/: README.md  __init__.py  rocket.py  structures.py  validators.py
src/superrocketlib/generators/: README.md  __init__.py  curve_generators.py
src/superrocketlib/models/: README.md  defaults.py  full_rocket_model.py  model.py  scalers.py
